// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/RaceLength renders empty object mistake 1`] = `
<td>
  <div>
    No data
  </div>
</td>
`;

exports[`components/columns/RaceLength renders hours 1`] = `
<td>
  <div>
    2h
  </div>
</td>
`;

exports[`components/columns/RaceLength renders laps 1`] = `
<td>
  <div>
    45L
  </div>
</td>
`;

exports[`components/columns/RaceLength renders minutes 1`] = `
<td>
  <div>
    45m
  </div>
</td>
`;

exports[`components/columns/RaceLength renders null 1`] = `
<td>
  <div>
    No data
  </div>
</td>
`;
